fix spacing on bottom of page

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -235,6 +235,7 @@ $logo-padding: 45px
   line-height: 30px
   width: 960px
   margin: 15px auto
+  padding-bottom: 30px
   a
     float: right
     background: #3B98F2
